Version 0.6    2008-

  * moved metadata extraction into plugins
	* fixed DLNA string for audio and image files
	* mp4/m4a metadata extraction
	* initial RSS support #1847121
	* initial mp3 decoder (madlib)
	* "external command" transcoder #1851499
	* support for simage
  * initial sort support
	* optionally use same UUID on each startup #1890011
	* updated default config
  * fixed file extension for converted image files
	* fixed bug #1837741 - Ogg files don't stream
	* fixed bug #1862357 - iTunes path not parsed correctly Mac OS X 10.5
	* fixed bug #1819645 - fuppesd is failing to background fuppes
  * fixed bug #1863196 - unsafe use of std::string
  * fixed bug #1870194 - OS X iTunes xml file paths
	* fixed bug #1864791 - multicast problem on OS X
	* fixed bug #1880069 - search string parser error
	

Version SVN-578 2007-12-19

	NOTE: please remove your fuppes.db

	* fixed ffmpeg compilation for 
    older ffmpeg versions (patch from Klaus S. Madsen)
    and with missing libswscale
	* fixed FAAD decoder for Ubuntu (patch from Klaus S. Madsen)
  * fixed stupid buffer overflow in 
	  FFmepgWrapper (patch from Jared D. McNeill)
	* MediaServer description values configurable
	* libnotify support without gnome-panel-applet (#1814615)
	* fixed #1822462 (ImageMagick includes)
	* fixed #1815588 (segfault when en-/decoder fails to load)
	* added optional refId support for virtual folders
	* support for Yamaha RX-N600
	* #1838835 temp dir configurable
  * pass additional ffmpeg arguments (add <ffmpeg_params> node)


Version SVN-549 2007-10-04
  * fixed UPnPBrowse for virtual devices
	* speedup database creation (items and vfolders)
	* fixed virtual folder creation
  * fixed size calculation in WAV and PCM encoder
	* large file support
	* database update: add new files
	* minor bugfixes and enhancements

Version SVN-530 2007-09-20
  * fixed WAV and PCM encoder
  * speedup transcoding
    removed lot's of memory re-/allocations  
  * fixed sleep-bug thanks to Tim Rightnour