@@ -147,6 +147,42 @@ AM_CONDITIONAL(MAGICK_PP_TRANSCODER, test "x$have_magickpp" = "xyes")
 #end ImageMagick
 
 
+
+
+#
+# Exiv2
+#
+use_exiv2=yes
+AC_ARG_ENABLE(exiv2, 
+            [  --disable-exiv2  Do not use Exiv2],
+            [ use_exiv2=no; ] )
+
+have_exiv2=no
+
+AH_TEMPLATE([HAVE_EXIV2], [])
+
+if test "x$use_exiv2" = "xyes"; then
+
+  EXIV2_PP_CFLAGS=""
+  EXIV2_PP_LIBS=""
+  PKG_CHECK_MODULES(EXIV2, exiv2 >= 0.16, have_exiv2=yes, have_exiv2=no)
+
+  if test "x$have_exiv2" = "xyes"; then
+    AC_DEFINE([HAVE_EXIV2], [1], [])
+  else
+    AC_MSG_NOTICE([*** exiv2 support disabled ***]);
+  fi
+
+fi
+
+AM_CONDITIONAL(EXIV2_METADATA, test "x$have_exiv2" = "xyes")
+AC_SUBST(EXIV2_CFLAGS)
+AC_SUBST(EXIV2_LIBS)
+
+
+
+
+
 #
 # libavformat
 #
@@ -722,6 +758,13 @@ if test "x$have_magickwand" = "xyes"; then
   echo "    ImageMagick   : enabled  (Wand)"
 else
   echo "    ImageMagick   : disabled (Wand)"
+fi
+
+# Exiv2
+if test "x$have_exiv2" = "xyes"; then
+  echo "    Exiv2         : enabled"
+else
+  echo "    Exiv2         : disabled"
 fi
 
 # simage
